# digital-filter

./: Cargo.toml
examples/: butterworth.rs  cheb1.rs  freqz.rs  kaiser.rs
src/: complex.rs  conv.rs  errors.rs  lib.rs  polyval.rs  values.rs
src/dft/: mod.rs
src/fft/: create.rs  fft1.rs  mod.rs
src/ffti/: copy_shuffle.rs  evaluate.rs  mod.rs
src/ffti/shuffle/: copy_shuffle.rs  mod.rs  shuffle.rs
src/filter/: mod.rs
src/filter_an/: freq_response.rs  freqs.rs  freqz.rs  group_delay.rs  mod.rs  phase_unwrap.rs
src/filter_ap/: mod.rs
src/filter_ap/butterworth/: butter_ap_zp.rs  mod.rs
src/filter_design/: freqz.rs  iirfilter.rs  mod.rs  values.rs
src/filter_design/service/: concatenate.rs  linspace.rs  lp2bp_zpk.rs  lp2hp_zpk.rs  lp2lp_zpk.rs  mod.rs  polynominal.rs  prod.rs  relative_degree.rs  zpk2tf.rs
src/filter_design/stub/: b.rs  h.rs  mod.rs  w.rs
src/fir_filter_design/: butter.rs  firwin.rs  mod.rs
src/fir_filter_design/service/: linspace.rs  mod.rs
src/fir_filter_design/service/signaltools/: hamming.rs  kaiser.rs  mod.rs  window.rs
src/fir_filter_design/values/: mod.rs  window_kind.rs
src/service/: complex.rs  polyval.rs
