[package]
name = "digital-filter"
version = "0.0.1-develop"
authors = ["kflange <zknsftk1msrk@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
num-complex = "*"
rustfft = "6"

[[example]]
name = "butterworth"
